# upbit-bot

./: .env  .env.example  .env.live  =5.0.0  AI_ANALYSIS_FIX.md  DESIGN_UPDATE.md  DUAL_OLLAMA_IMPLEMENTATION.md  FINAL_STRATEGY_REPORT.md  LATEST_UPDATES.md  OLLAMA_MODEL_CONFIG.md  OLLAMA_VERSION_REQUIREMENTS.md  OPTIMIZATION_REPORT.md  PAPER_TRADING_GUIDE.md  PROJECT_ANALYSIS.md  README.md  SERVER_SETUP_GUIDE.md  SERVER_STATUS.md  UPBIT_VALIDATION_GUIDE.md  VALIDATION_SUMMARY.md  analyze_optimization.py  backtest_krw_btc.csv  backtest_results.json  combined_strategy_results.csv  main.py  monitor_performance.py  optimization_results.csv  optimize_parameters.py  optimize_rsi.py  paper_trading_results.json  paper_trading_vb.json  plan.md  pt_10pct.json  pt_2pct.json  pt_ma_crossover.json  pt_mixed_bb_rsi_ma.json  pt_rsi_trend_filter.json  pt_volatility_breakout.json  pyproject.toml  requirements-dev.txt  requirements.txt  (+7 more)
backtesting/: engine.py
data/: performance.db-shm  performance.db-wal  trade_history.db  trade_history.db-shm  trade_history.db-wal
docs/: architecture.md  ollama_local_installation.md  ollama_model_review.md  windows_ollama_quick_setup.md  windows_ollama_setup.md
scripts/: __init__.py  backtest.py  check_ollama_models.py  collect_data.py  install_ollama_model.py  install_ollama_models.sh  manage_scanner.py  run_bot.py  start_scanner.py  switch_ollama_model.sh  test_connection.py  test_windows_ollama.sh  web_dashboard.py
src/: config.py
tests/: TEST_CASES_FINAL_CANDIDATES.md  __init__.py  test_backtesting.py  test_execution_engine.py  (+6 more)
(+65 files in other folders)
