[project]
name = "upbit-bot"
version = "0.1.0"
description = "Backtesting and live monitoring helpers for an Upbit trading bot"
authors = [{ name = "AutoGen" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.6",
]

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
